--- a/content/rooms/v6.md
+++ b/content/rooms/v6.md
@@ -42,7 +42,8 @@ in [room version 5](/rooms/v5).
 ### Event format
 
 {{% added-in v=6 %}} Through enforcement of [Canonical JSON](#canonical-json),
-the `depth` limit has been reduced in this room version.
+the `depth` limit has been reduced in this room version, and numeric values may
+no longer be formatted as floats.
 
 {{% rver-fragment name="v6-event-format" %}}
 
